Bug 54297 - [Bisected i965]Ogles1conform miplin.c regressed
Summary: [Bisected i965]Ogles1conform miplin.c regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 9.0
Hardware: All Linux (All)
: high major
Assignee: Kenneth Graunke
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-31 03:22 UTC by lu hua
Modified: 2012-09-27 05:26 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-08-31 03:22:42 UTC
ystem Environment:
--------------------------
Arch:             x86_64
Platform:         Ivybridge
Libdrm:    (master)libdrm-2.4.39-1-g7080bfdfd9b6c5f003daaef37ae9c329f2d46a6c
Mesa:    (master)83933606596a0197e6cd1740cb439eaf055e544d
Xserver:(master)xorg-server-1.12.99.905-12-g148583d62b84832369e9df39b3e527b99ca96761
Xf86_video_intel:(master)2.20.5-23-gdeaa1cac269be03f4ec44092f70349ff466d59de
Libva:    (staging)3c9f3d7dbd0e1b53cd47ac42984e7a563853f194
Libva_intel_driver:(staging)658ba48f5586dacd051a2d99504beedea9f7a792
Kernel:    (drm-intel-next-queued) 0e0428baf7c156bc2ba8a3fd311399c1afd88f54

Bug detailed description:
-------------------------
It fails on sandybridge and ivybridge with mesa master branch.It doesn't happen
on 8.0 branch.
'mustpass.c' and 'texedge.c' also fail and have same bisect commit.

output:
Conform (single precision) failed.
    Mipmaps Interpolation test (Test number #55) failed.
******************** SUMMARY OF 'conform' RESULTS ********************
SUMMARY: Mipmaps Interpolation test (#55) failed 30 times at path level 0.
SUMMARY: 1 test failed across all configs at path level 0.
SUMMARY: 30 conformant configs, 0 non-conformant configs.
****************** END SUMMARY OF 'conform' RESULTS ******************


Bisect shows:08be1d288f216232d3974f5997b266a8dd720928 is the first bad commit.
commit 08be1d288f216232d3974f5997b266a8dd720928
Author:     Ian Romanick <ian.d.romanick@intel.com>
AuthorDate: Fri Jul 27 11:56:42 2012 -0700
Commit:     Ian Romanick <ian.d.romanick@intel.com>
CommitDate: Wed Aug 29 15:09:34 2012 -0700

    mesa/es: Validate glEnable cap in Mesa code rather than the ES wrapper

    Also handle glDisable, glIsEnabled, glEnableClientState, and
    glDisableClientState.

    v2: Add proper core-profile and GLES3 filtering.

    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>

Reproduce steps:
----------------------------
1. xinit
2. conform -s -v 2 -1 miplin.c
Comment 1 lu hua 2012-09-05 01:13:25 UTC
It also happens on Ironlake with mesa master branch.
Comment 2 lu hua 2012-09-05 06:42:48 UTC
It also happens on mesa 9.0 branch(commit:6886da783ac2fc549b4)
Comment 3 Kenneth Graunke 2012-09-14 10:03:06 UTC
Patch on mailing list:
http://lists.freedesktop.org/archives/mesa-dev/2012-September/027412.html
Comment 4 Kenneth Graunke 2012-09-16 06:15:55 UTC
Fixed in master (but not yet 9.0).

commit 679c93ff89c71cbd3b1d24e88abd38f00b8c1f02
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Fri Sep 14 02:39:52 2012 -0700

    meta: Don't _mesa_set_enable() invalid targets in ES 1.
    
    GL_TEXTURE_1D, GL_TEXTURE_3D, GL_TEXTURE_RECTANGLE, and
    GL_TEXTURE_GEN_S/T/R/Q don't exist in ES 1 contexts, so any meta ops
    that used _mesa_meta_begin with MESA_META_TEXTURE would trigger GL
    errors.  One such operation is _mesa_meta_Clear().
    
    On ES 1, we want to disable GL_TEXTURE_GEN_STR_OES instead.
    
    Fixes the ES1 conformance test miplin.c, which was regressed by commit
    08be1d288f216232d3974f5997b266a8dd720928.
    
    NOTE: This is a candidate for the 9.0 branch.
    
    v2: Also blacklist GL_TEXTURE_3D, per Brian's comment.
    v3: Disable GL_TEXTURE_GEN_STR_OES, per Ian's comment.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54297
    Reviewed-by: Brian Paul <brianp@vmware.com> [v1]
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>
Comment 5 lu hua 2012-09-17 01:15:52 UTC
Fixed on master branch(commit:679c93ff89c71cbd3b1d24e88abd38f00b8c1f02)
Comment 6 lu hua 2012-09-27 05:20:43 UTC
Fixed on 9.0 branch(commit:b1ce5749b996d6ce3dcf9bbd1537c46d14e62adb).
Comment 7 lu hua 2012-09-27 05:25:16 UTC
Fixed on the latest master branch(commit: 112caa853d53467a9c0) and 9.0 branch(commit:b1ce5749b996d6ce3d).
Comment 8 lu hua 2012-09-27 05:26:18 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.